--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "simulador-esthetic-backend",
   "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "form-data": "^4.0.0",
-    "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.1"
+    "multer": "^1.4.5"
   }
 }
