--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "simulador-esthetic",
+  "name": "controlnet-simulador",
   "version": "1.0.0",
+  "description": "Servidor Express para simulação ortodôntica com ControlNet via Replicate",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5"
   }
 }
